--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,9 +1,9 @@
 <div class="content column">
-  <article *ngFor = 'let lst of appList' [class.selected]="post === selectedPost">
+  <article *ngFor = 'let lst of appList' [class.hidden]="isSelected">
     <div class="post-wrapper">
       <a class="blog-image"><img src="{{lst.src}}"></a>
       <div class="post-content">
-        <a class="blog-title-link" href="#">
+        <a class="blog-title-link" href="#" (click)="onClick(lst)">
           <h2 class="blog-title">{{lst.title}}</h2>
         </a>
         <div class="post-summary-wrapper">
@@ -13,5 +13,7 @@
       </div>
     </div>
   </article>
-  <app-detail [post]="selectedPost"></app-detail>
+  <div>
+    <app-detail [article]="selectedPost" [select]="isSelected"></app-detail>
+  </div>
 </div>
