--- a/src/app/content/detail/detail.component.html
+++ b/src/app/content/detail/detail.component.html
@@ -1,11 +1,11 @@
-<div *ngIf="post" class="post-wrapper">
-  <a class="blog-image"><img src=""></a>
+<div *ngIf="article" class="post-wrapper" [class.hidden]="isSelected === false">
+  <a class="blog-image"><img src="{{article.src}}"></a>
   <div class="post-content">
     <a class="blog-title-link" href="#">
-      <h2 class="blog-title">{{post.title}}</h2>
+      <h2 class="blog-title">{{article.title}}</h2>
     </a>
     <div class="post-summary-wrapper">
-      <p class="post-summary"></p>
+      <p class="post-summary">{{article.content}}</p>
     </div>
   </div>
 </div>
