--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -23,8 +23,6 @@ body {
   box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
   min-height:80vh;
 }
-
-
-
-
-
+.hidden {
+  display: none;
+}
