--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -3,8 +3,8 @@
     <div class="post-wrapper">
       <a class="blog-image"><img src="{{lst.src}}"></a>
       <div class="post-content">
-        <a class="blog-title-link" href="#" (click)="onClick(lst)">
-          <h2 class="blog-title">{{lst.title}}</h2>
+        <a class="blog-title-link" href="javascript:void(0)" (click)="onClick(lst)">
+          <h2 class="blog-title">{{lst.tback}}</h2>
         </a>
         <div class="post-summary-wrapper">
           <p class="post-summary">{{lst.content}}</p>
