--- a/src/app/content/detail/detail.component.css
+++ b/src/app/content/detail/detail.component.css
@@ -22,18 +22,25 @@
   font-size: 14px;
   line-height: 22px;
 }
-.read-more-link {
-  display: inline;
-  margin-left: 8px;
-  -webkit-transition: color 200ms ease;
-  transition: color 200ms ease;
-  font-family: Lato, sans-serif;
-  color: #aaa;
-  font-size: 14px;
-  line-height: 22%;
-  text-decoration: underline;
-}
 .blog-image img {
   width: 100%;
   max-height: 300px;
+}
+button {
+  margin-top:15px;
+  background: #fff;
+  color: #333;
+  display: inline-block;
+  padding: 10px 30px;
+  text-transform: uppercase;
+  border: 1px solid #d1d1d1;
+  border-radius: 3px;
+  border-bottom: 3px solid #ddd ;
+  outline: none;
+}
+button:hover {
+  color: #fff;
+  background: #e31837;
+  border: 1px solid #e31837;
+  border-bottom: 3px solid #e31837;
 }
