--- a/src/app/content/detail/detail.component.html
+++ b/src/app/content/detail/detail.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="article" class="post-wrapper" [class.hidden]="isSelected === false">
   <a class="blog-image"><img src="{{article.src}}"></a>
   <div class="post-content">
-    <a class="blog-title-link" href="#">
+    <a class="blog-title-link" href="javascript:void(0)">
       <h2 class="blog-title">{{article.title}}</h2>
     </a>
     <div class="post-summary-wrapper">
