--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,8 @@
   <app-header></app-header>
 </header>
 <div class="container content-wrap clearfix">
-  <app-content></app-content>
+  <!-- <app-content></app-content> -->
+  <employee-list></employee-list>
   <app-sidebar></app-sidebar>
 </div>
 <app-footer></app-footer>
