--- a/src/app/content/content.component.css
+++ b/src/app/content/content.component.css
@@ -1,9 +1,3 @@
-.content {
-  width: 75%;
-  border-right: 1px solid #e2e2e2;
-  padding: 40px 15px;
-  min-height:80vh
-}
 .post-wrapper {
   margin-bottom: 50px;
   border-radius: 5px;
@@ -13,7 +7,7 @@
 .post-content {
   padding: 35px;
 }
-.blog-title-link {
+.post-title-link {
   -webkit-transition: opacity 200ms ease;
   transition: opacity 200ms ease;
   color: #333;
@@ -28,7 +22,7 @@
   font-size: 14px;
   line-height: 22px;
 }
-.blog-image img {
+.post-image img {
   width: 100%;
   max-height: 300px;
 }
@@ -36,4 +30,29 @@ button {
   border: 0;
   cursor: pointer;
   outline: 0;
+}
+.tab {
+  display: inline-block;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+.tab button {
+  display: inline-block;
+  background-color: #32c896;
+  border-bottom: solid 5px #238b68;
+  padding: 10px 20px;
+  margin-bottom: 4px;
+  color: #fff;
+  cursor: pointer;
+}
+.tab button:hover {
+  background-color: #238b68;
+}
+.tab button.active {
+  background-color: #238b68;
+}
+.tabcontent {
+  padding: 6px 12px;
+  border-top: none;
 }
