--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,14 +1,14 @@
 <div class="content column">
   <article *ngFor = 'let lst of appList' [class.hidden]="isSelected">
     <div class="post-wrapper">
-      <a class="blog-image"><img src="{{lst.src}}"></a>
+      <a class="post-image"><img [src]="lst.src" [URLImage]="appList.src" alt="..."></a>
       <div class="post-content">
-        <a class="blog-title-link" href="javascript:void(0)" (click)="onClick(lst)">
-          <h2 class="blog-title">{{lst.tback}}</h2>
+        <a class="post-title-link" href="javascript:void(0)" (click)="onClick(lst)">
+          <h2 class="post-title">{{lst.title | uppercase }}</h2>
         </a>
         <div class="post-summary-wrapper">
-          <p class="post-summary">{{lst.content}}</p>
-          <button (click)="onClick(lst)">Read more...</button>
+          <p class="post-summary">{{lst.content | ellipsis: 100 }}</p>
+          <button (click)="onClick(lst)">Read more>></button>
         </div>
       </div>
     </div>
