--- a/src/app/employee-list/employee-list.component.css
+++ b/src/app/employee-list/employee-list.component.css
@@ -3,26 +3,29 @@
   width: 100%;
 }
 .list-employees td, .list-employees th {
-  border: 1px solid #ddd;
   padding: 8px;
   vertical-align: middle;
 }
 .list-employees tr:nth-child(even) {
   background-color: #f2f2f2;
 }
-.list-employees tr:hover {
-  background-color: #ddd;
-}
 .list-employees th {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
-  background-color: #4CAF50;
-  color: white;
+  border-bottom: 1px solid #e7eaec;
+  box-shadow: 2px 6px 10px -4px rgba(51,51,51,.16);
 }
 .avatar img {
   width: 30px;
   height: 30px;
+  float: left;
+}
+.avatar span, .avatar small {
+  margin-left: 15px;
+}
+.avatar strong {
+  font-weight: 700;
 }
 .blue {
   background: blue;
@@ -35,4 +38,8 @@
 }
 .violet {
   background: violet;
+}
+a {
+  text-decoration: none;
+  color: #000;
 }
