--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -27,7 +27,7 @@
         <td *ngSwitchDefault class="gold">{{emp.position}}</td>
         <td>{{emp.type}}</td>
         <td>{{emp.email}}</td>
-        <td>{{emp.phone}}</td>
+        <td phone>{{emp.phone}}</td>
       </tr>
     </tbody>
   </table>
