--- a/src/app/employee-list/employee-list.component.css
+++ b/src/app/employee-list/employee-list.component.css
@@ -14,7 +14,9 @@
   padding-bottom: 12px;
   text-align: left;
   border-bottom: 1px solid #e7eaec;
-  box-shadow: 2px 6px 10px -4px rgba(51,51,51,.16);
+  -moz-box-shadow: 2px 6px 10px -6px rgba(51,51,51,.16);
+  -webkit-box-shadow: 2px 6px 10px -6px rgba(51,51,51,.16);
+  box-shadow: 2px 6px 10px -6px rgba(51,51,51,.16);
 }
 .avatar img {
   width: 30px;
@@ -42,4 +44,7 @@
 a {
   text-decoration: none;
   color: #000;
+}
+a:hover {
+  color: gold;
 }
