--- a/src/app/employee-list/details/details.component.css
+++ b/src/app/employee-list/details/details.component.css
@@ -1,5 +1,6 @@
 .info {
   position: relative;
+  min-height: 50px;
 }
 .info label {
   position: absolute;
@@ -9,6 +10,77 @@
   margin-left: 20%;
 }
 h3 {
-  font-size: 20px;
+  font-size: 24px;
   margin-bottom: 20px;
+  text-align: center
+}
+.detail-info {
+  width: 70%;
+  float: left;
+}
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  width: 30%;
+  float: left;
+  margin-bottom: 30px;
+}
+.card img {
+  width: 100%;
+}
+.card p {
+  text-align: center;
+  padding: 10px;
+}
+.list-employees {
+  border-collapse: collapse;
+  width: 100%;
+}
+.list-employees td, .list-employees th {
+  padding: 8px;
+  vertical-align: middle;
+}
+.list-employees tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+.list-employees th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  border-bottom: 1px solid #e7eaec;
+  -moz-box-shadow: 2px 6px 10px -6px rgba(51,51,51,.16);
+  -webkit-box-shadow: 2px 6px 10px -6px rgba(51,51,51,.16);
+  box-shadow: 2px 6px 10px -6px rgba(51,51,51,.16);
+}
+.avatar img {
+  width: 30px;
+  height: 30px;
+  float: left;
+  border-radius: 30px;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+}
+.avatar span, .avatar small {
+  margin-left: 15px;
+}
+.avatar strong {
+  font-weight: 700;
+}
+.blue {
+  color: blue;
+}
+.yellow {
+  color: yellow;
+}
+.gold {
+  color: gold;
+}
+.violet {
+  color: violet;
+}
+a {
+  text-decoration: none;
+  color: #000;
+}
+a:hover {
+  color: gold;
 }
