--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -13,14 +13,14 @@
       <tr *ngFor = 'let emp of employees'>
         <td class="avatar">
           <a href="javascript:void(0)" (click)="onClick(emp)">
-            <img src="{{emp.avatar}}" URLImage alt="...">
+            <img src="{{emp.avatar | avatar }}" alt="...">
             <span>
               <strong>{{emp.name}} </strong><br>
               <small>{{emp.code}} </small>
             </span>
           </a>
         </td>
-        <td class="text-center" [class]="emp.position | position">{{ emp.position }}</td>
+        <td [class]="emp.position" position>{{ emp.position }}</td>
         <td>{{emp.type}}</td>
         <td>{{emp.email}}</td>
         <td phone>{{emp.phone}}</td>
