List member service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,8 @@
 </header>
 <div class="container content-wrap clearfix">
   <!-- <app-content></app-content> -->
-  <employee-list></employee-list>
+  <!-- <employee-list></employee-list> -->
+  <service-member></service-member>
   <app-sidebar></app-sidebar>
 </div>
 <app-footer></app-footer>
