--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,8 @@
 <div class="container content-wrap clearfix">
   <!-- <app-content></app-content> -->
   <!-- <employee-list></employee-list> -->
-  <service-member></service-member>
+  <!-- <service-member></service-member> -->
+  <app-form></app-form>
   <app-sidebar></app-sidebar>
 </div>
 <app-footer></app-footer>
