fix css and code for citizen

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,15 +1,29 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-  max-width: 500px;
+  max-width: 700px;
   margin: 0 auto;
-  padding: 30px;
+  padding: 0 0 30px;
+  -webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, .5);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, .5);
+}
+.form-group, h2, button {
+  margin: 0 20px;
+}
+.form-info h1 {
+  padding: 15px 20px;
+  margin: 0;
+  background: green;
+  text-transform: uppercase;
+  color: #fff;
+}
+.form-info h2 {
+  padding: 20px 0;
 }
 .form-control, select {
   display: block;
   width: 100%;
   height: 34px;
   font-size: 14px;
-  line-height: 1.42857143;
   color: #555;
   margin-bottom: 15px;
   background-color: #fff;
@@ -18,9 +32,6 @@ body {
   border-radius: 4px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
   box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-  -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
-  -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
-  transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 }
 label {
   display: inline-block;
@@ -34,18 +45,10 @@ label {
   margin-bottom: 0;
   font-size: 14px;
   font-weight: 400;
-  line-height: 1.42857143;
   text-align: center;
   white-space: nowrap;
   vertical-align: middle;
-  -ms-touch-action: manipulation;
-  touch-action: manipulation;
   cursor: pointer;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  background-image: none;
   border: 1px solid transparent;
   border-radius: 4px;
 }
@@ -59,6 +62,9 @@ label {
   background: gray ! important;
 }
 .ng-valid.form-control {
+  border: 1px solid green;
+}
+.ng-valid .form-control, .ng-valid select {
   border: 1px solid green;
 }
 input[type="radio"] {
