--- a/src/app/form-model/form-model.component.html
+++ b/src/app/form-model/form-model.component.html
@@ -1,4 +1,5 @@
-<form [formGroup]="demoModelForm" (ngSubmit)="onSubmit()">
+<form [formGroup]="demoModelForm" (ngSubmit)="onSubmit()" class="form-info">
+  <h1>infomation</h1>
   <h2>Personal infomation</h2>
   <div class="form-group">
     <label>Name</label>
@@ -37,7 +38,7 @@
   </div>
   <div *ngIf="showDiv" class="form-group">
     <label>Certificate</label>
-    <input type="text" class="form-control" formControlName="certificate">
+    <input type="text" class="form-control" formControlName="certificate" [required]="showDiv">
   </div>
   <button type="submit" class="btn btn-default" [disabled]="!demoModelForm.valid">Submit</button>
   <div class="submitted-message" *ngIf="submittedForm">
