--- a/src/app/form-model/form-model.component.html
+++ b/src/app/form-model/form-model.component.html
@@ -38,7 +38,7 @@
   </div>
   <div *ngIf="showDiv" class="form-group">
     <label>Certificate</label>
-    <input type="text" class="form-control" formControlName="certificate" [required]="showDiv">
+    <input type="text" class="form-control" formControlName="certificate">
   </div>
   <button type="submit" class="btn btn-default" [disabled]="!demoModelForm.valid">Submit</button>
   <div class="submitted-message" *ngIf="submittedForm">
