--- a/src/app/form-model/form-model.component.html
+++ b/src/app/form-model/form-model.component.html
@@ -24,10 +24,14 @@
     <label>Code</label>
     <input type="text" class="form-control" formControlName="code">
   </div>
-  <div class="form-group">
-    <label>Skill</label>
-    <input type="text" class="form-control" formControlName="skill">
+  <div class="form-group" formArrayName="skills">
+    <div *ngFor="let skill of demoModelForm.controls.skills.controls; let i=index" [formGroupName]="i">
+      <label>Skill: </label>
+      <input class="form-control" formControlName="skill" type="text">
+      <button *ngIf="demoModelForm.controls.skills.controls.length > 1" (click)="removeSkill(i)">Delete skill</button>
+    </div>
   </div>
+  <button type="button" (click)="addSkill()">Add new skill</button>
   <div class="form-group">
     <label>Citizen</label>
     <select name="citizen" formControlName="citizen" (change)="showCertificate($event)">
