--- a/src/app/form-model/form-model.component.html
+++ b/src/app/form-model/form-model.component.html
@@ -28,10 +28,12 @@
     <div *ngFor="let skill of demoModelForm.controls.skills.controls; let i=index" [formGroupName]="i">
       <label>Skill: </label>
       <input class="form-control" formControlName="skill" type="text">
-      <button *ngIf="demoModelForm.controls.skills.controls.length > 1" (click)="removeSkill(i)">Delete skill</button>
+      <a  class="form-control" *ngIf="demoModelForm.controls.skills.controls.length > 1" (click)="removeSkill(i)">Delete skill</a>
     </div>
   </div>
-  <button type="button" (click)="addSkill()">Add new skill</button>
+  <div class="form-group">
+    <a class="form-control" (click)="addSkill()">Add new skill</a>
+  </div>
   <div class="form-group">
     <label>Citizen</label>
     <select name="citizen" formControlName="citizen" (change)="showCertificate($event)">
