--- a/src/styles.css
+++ b/src/styles.css
@@ -33,6 +33,14 @@ body {
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
   box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
 }
+a.form-control {
+  border: 0;
+  box-shadow: none;
+  text-decoration: underline;
+  margin: 0;
+  cursor: pointer;
+  color: green;
+}
 label {
   display: inline-block;
   max-width: 100%;
